# HM_features_and_XGBoost

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: Hydrometeorological_features_Calculations.ipynb  XGBoost_model.ipynb
src/hm_features/: __init__.py  features.py
src/xgb_pipeline/: __init__.py  xgb_workflow.py
